--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- 🔗 Add internet permission here -->
+    <!-- 🌐 Internet permission for API calls -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -15,15 +15,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RedAlert"
         tools:targetApi="31">
+
+        <!-- 💡 Health Articles Activity -->
+        <activity
+            android:name=".HealthArticlesActivity"
+            android:exported="false" />
+
+        <!-- 🌼 Tips Screen -->
         <activity
             android:name=".TipsActivity"
             android:exported="false" />
+
+        <!-- 🔮 Prediction Result Screen -->
         <activity
             android:name=".PredictionResultActivity"
             android:exported="false" />
+
+        <!-- 📅 Start Cycle Screen -->
         <activity
             android:name=".StartCycleActivity"
             android:exported="false" />
+
+        <!-- 🏠 Launcher / Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -32,6 +45,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
