--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,13 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+
+    implementation libs.volley // ✅ ADD THIS
+
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
