✨ Add User Profile UI screen with input fields

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
         android:theme="@style/Theme.RedAlert"
         tools:targetApi="31">
         <activity
-            android:name=".ReminderReceiver"
+            android:name=".UserProfileActivity"
             android:exported="false" />
-        <!-- 🔔 Reminder Notification Activity -->
+        <activity
+            android:name=".ReminderReceiver"
+            android:exported="false" /> <!-- 🔔 Reminder Notification Activity -->
         <activity
             android:name=".ReminderActivity"
             android:exported="false" /> <!-- 💬 Quotes -->
