--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
+    id 'com.google.gms.google-services' // ✅ Add this to apply plugin block
 }
 
 android {
@@ -29,12 +30,13 @@ android {
 }
 
 dependencies {
+    implementation("com.google.firebase:firebase-auth:22.3.0")
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
 
-    implementation libs.volley // ✅ ADD THIS
+    implementation libs.volley // ✅ If needed for other API calls
 
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
