--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
 
 dependencies {
     implementation("com.google.firebase:firebase-auth:22.3.0")
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation('com.prolificinteractive:material-calendarview:1.4.3') {
+        exclude group: 'com.android.support'
+    }
+    implementation 'com.google.firebase:firebase-firestore:24.10.1'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
