--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,14 @@ dependencies {
     }
     implementation 'com.google.firebase:firebase-firestore:24.10.1'
     implementation libs.appcompat
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 
     implementation libs.volley // ✅ If needed for other API calls
 
