added camera mood tracking integrated with mood tracking

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,14 @@ dependencies {
         exclude group: 'com.android.support'
     }
     implementation 'com.google.firebase:firebase-firestore:24.10.1'
+    implementation 'com.google.firebase:firebase-storage:20.3.0' // ✅ Added Firebase Storage
+
     implementation libs.appcompat
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
@@ -52,3 +55,4 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 }
+
